restructuring repo and updating .gitignore to accomdate for migration to eleventy rendering of .md files onto dedicated website.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-.obsidian/
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-error.log*
+
+# Eleventy
+_site/
+
+# MacOS
 .DS_Store
 Icon?
+
+# Local env
+.env
+
+# Obsidian
+.obsidian/
