--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "south_island_recipes",
+  "name": "south-island-kitchen",
   "version": "1.0.0",
-  "description": "Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chef's exceptional and worldly palates.",
-  "main": "index.js",
+  "description": "A curated collection of recipes from South Island Kitchen.",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "eleventy",
+    "dev": "eleventy --serve"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DearCM1/South-Island-Recipes.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Calum Dear",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/DearCM1/South-Island-Recipes/issues"
-  },
-  "homepage": "https://github.com/DearCM1/South-Island-Recipes#readme",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2"
   }
